feat: navbar estilizado

--- a/main.html
+++ b/main.html
@@ -12,17 +12,17 @@
 
 </head>
 <body>
-    <header id="home" class ="cabecalho">
+    <header class ="cabecalho">
         <div class="navBar">
             <ul class="navBar-lista">
-                <li class="lista-menu_item active"> <a href="#">Home</a></li>
-                <li class="lista-menu_item"> <a href="#">Portfolio</a></li>
+                <li class="lista-menu_item active"> <a href="#home">Home</a></li>
+                <li class="lista-menu_item"> <a href="#portfolio">Portfolio</a></li>
                 <li class="lista-menu_item"> <a href="#">About</a></li>
                 <li class="lista-menu_item"> <a href="#">Contact</a></li>
             </ul>
         </div>
     </header>
-    <section claass="conteiner-home">
+    <section id="home" claass="conteiner-home">
         <div class="home-descricao">
             <div class="me">
                 <img src="assets/img/imagem 3.jpg" alt="Foto de Perfil" class="foto-perfil"/>
@@ -35,7 +35,7 @@
                 <span>FullStack Developer</span>
                 </h1>
                 <div class="home-buttons">
-                    <a href="#" class="btn-me">Meus Projetos</a>
+                    <a href="#portfolio" class="btn-me">Meus Projetos</a>
                     <img src="assets/icons/seta-direita.png" alt="seta de direita" class="icon-seta"/>
                 </div>
             </div>
@@ -66,5 +66,6 @@
     </section>
 
     <script src="assets/js/carousel.js"></script>
+    <script src="assets/js/navbar.js"></script>
 </body>
 </html>
