feat: criação do about

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
             <ul class="navBar-lista">
                 <li class="lista-menu_item active"> <a href="#home">Home</a></li>
                 <li class="lista-menu_item"> <a href="#portfolio">Portfolio</a></li>
-                <li class="lista-menu_item"> <a href="#">About</a></li>
+                <li class="lista-menu_item"> <a href="#about">About</a></li>
                 <li class="lista-menu_item"> <a href="#">Contact</a></li>
             </ul>
         </div>
@@ -64,6 +64,33 @@
 
     </div>
     </section>
+    <section id="about" class="conteiner-about">
+        <div class="about-descricao">
+        <div class="foto-about"></div>
+        <p class="about-text">Lorem Ipsum
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, urna quis facilisis dapibus, nulla lacus hendrerit nisi, eget vulputate justo dui nec mauris. Vivamus nec magna vel erat posuere gravida. Sed id urna vitae libero dictum lacinia. Integer ut sem id elit tincidunt eleifend. Suspendisse potenti. Aliquam erat volutpat. Donec elementum, leo eget fermentum vulputate, purus justo elementum risus, vitae pulvinar nibh nunc vel lacus.
+
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed nibh sed lectus ultricies vulputate. Cras vel enim et ligula blandit condimentum in sit amet elit. Nulla tempor hendrerit erat, sit amet consequat mauris ultrices id. Quisque mattis velit eget eros viverra, a pretium massa pulvinar. Sed sit amet mi non eros pretium dignissim. Suspendisse eu vestibulum nisi, quis varius elit. Etiam a hendrerit massa.</p>
+        </div>
+        </section>
+        <div class="my-stack">
+            <h2 class="stack-title">My Stacks</h2>
+
+            <div class="stacks">
+                <div class="stack-icon">
+                    <img src="assets/icons/icon-html.png" alt="HTML">
+                    <img src="assets/icons/icon-css.png" alt="HTML">
+                    <img src="assets/icons/icon-js.png" alt="HTML">
+                    <img src="assets/icons/icon-python.png" alt="HTML">
+                    <img src="assets/icons/icon-figma.png" alt="HTML">
+                    <img src="assets/icons/icon-git.png" alt="HTML">
+                    <img src="assets/icons/icon-github.png" alt="HTML">
+                    <img src="assets/icons/icon-vscode.png" alt="HTML">
+                </div>
+            </div>
+        </div>
+    
+    <section id="contact" class="conteiner-contact"></section>
 
     <script src="assets/js/carousel.js"></script>
     <script src="assets/js/navbar.js"></script>
