feat: modificações no about

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
                 <li class="lista-menu_item active"> <a href="#home">Home</a></li>
                 <li class="lista-menu_item"> <a href="#portfolio">Portfolio</a></li>
                 <li class="lista-menu_item"> <a href="#about">About</a></li>
-                <li class="lista-menu_item"> <a href="#">Contact</a></li>
+                <li class="lista-menu_item"> <a href="#contact">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -74,18 +74,18 @@
         </div>
         </section>
         <div class="my-stack">
-            <h2 class="stack-title">My Stacks</h2>
+            <h2 class="stack-title">MY STACKS</h2>
 
             <div class="stacks">
                 <div class="stack-icon">
-                    <img src="assets/icons/icon-html.png" alt="HTML">
-                    <img src="assets/icons/icon-css.png" alt="HTML">
-                    <img src="assets/icons/icon-js.png" alt="HTML">
-                    <img src="assets/icons/icon-python.png" alt="HTML">
-                    <img src="assets/icons/icon-figma.png" alt="HTML">
-                    <img src="assets/icons/icon-git.png" alt="HTML">
-                    <img src="assets/icons/icon-github.png" alt="HTML">
-                    <img src="assets/icons/icon-vscode.png" alt="HTML">
+                    <div class="stack-fundo"><img src="assets/icons/icon-html.png" alt="HTML"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-css.png" alt="CSS"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-js.png" alt="JAVASCRIPT"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-python.png" alt="PYTHON"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-figma.png" alt="FIGMA"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-git.png" alt="GIT"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-github.png" alt="GITHUB"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-vscode.png" alt="VSCODE"></div>
                 </div>
             </div>
         </div>
