feat:criação do contato

--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
                 </h1>
                 <div class="home-buttons">
                     <a href="#portfolio" class="btn-me">Meus Projetos</a>
-                    <img src="assets/icons/seta-direita.png" alt="seta de direita" class="icon-seta"/>
+                    <img  src="assets/icons/seta-direita.png" alt="seta de direita" class="icon-seta" />
                 </div>
             </div>
         </div>
@@ -72,27 +72,46 @@
 
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed nibh sed lectus ultricies vulputate. Cras vel enim et ligula blandit condimentum in sit amet elit. Nulla tempor hendrerit erat, sit amet consequat mauris ultrices id. Quisque mattis velit eget eros viverra, a pretium massa pulvinar. Sed sit amet mi non eros pretium dignissim. Suspendisse eu vestibulum nisi, quis varius elit. Etiam a hendrerit massa.</p>
         </div>
-        </section>
+    </section>
         <div class="my-stack">
             <h2 class="stack-title">MY STACKS</h2>
 
-            <div class="stacks">
-                <div class="stack-icon">
+        <div class="stack-ticker">
+            <div class="stack-track">
+                <div class="stack-group">
                     <div class="stack-fundo"><img src="assets/icons/icon-html.png" alt="HTML"></div>
                     <div class="stack-fundo"><img src="assets/icons/icon-css.png" alt="CSS"></div>
-                    <div class="stack-fundo"><img src="assets/icons/icon-js.png" alt="JAVASCRIPT"></div>
-                    <div class="stack-fundo"><img src="assets/icons/icon-python.png" alt="PYTHON"></div>
-                    <div class="stack-fundo"><img src="assets/icons/icon-figma.png" alt="FIGMA"></div>
-                    <div class="stack-fundo"><img src="assets/icons/icon-git.png" alt="GIT"></div>
-                    <div class="stack-fundo"><img src="assets/icons/icon-github.png" alt="GITHUB"></div>
-                    <div class="stack-fundo"><img src="assets/icons/icon-vscode.png" alt="VSCODE"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-js.png" alt="JS"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-python.png" alt="Python"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-figma.png" alt="Figma"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-git.png" alt="Git"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-github.png" alt="GitHub"></div>
+                    <div class="stack-fundo"><img src="assets/icons/icon-vscode.png" alt="VSCode"></div>
                 </div>
             </div>
         </div>
-    
-    <section id="contact" class="conteiner-contact"></section>
+
+    <section id="contact" class="conteiner-contact">
+
+        <div class="contact-descricao">
+            <h2 class="contact-title">Contact Me</h2>
+            <form class="contact-form">
+                <input type="text" placeholder="Name" class="contact-input" required>
+                <input type="email" placeholder="Email" class="contact-input" required>
+                <textarea placeholder="Message" class="contact-textarea" required></textarea>
+                <button type="submit" class="contact-button">Send</button>
+            </form>
+        </div>
+        <div class="contact-redes">
+            <div class="contact-buttons">
+                    <a href="#portfolio" class="btn-me">Meus Projetos</a>
+        </div>
+
+
+    </section>
 
     <script src="assets/js/carousel.js"></script>
     <script src="assets/js/navbar.js"></script>
+    <script src="assets/js/stacks.js"></script>
 </body>
 </html>
