feat: connstrução do formulario

--- a/main.html
+++ b/main.html
@@ -93,18 +93,74 @@
 
     <section id="contact" class="conteiner-contact">
 
-        <div class="contact-descricao">
-            <h2 class="contact-title">Contact Me</h2>
-            <form class="contact-form">
-                <input type="text" placeholder="Name" class="contact-input" required>
-                <input type="email" placeholder="Email" class="contact-input" required>
-                <textarea placeholder="Message" class="contact-textarea" required></textarea>
-                <button type="submit" class="contact-button">Send</button>
-            </form>
-        </div>
+        <section id="contact" class="conteiner-contact">
+    <div class="contact-wrapper">
+
+        <h2 class="contact-title">CONTATO</h2>
+
+        <form class="contact-form">
+
+            <div class="contact-field">
+                <input 
+                    type="text" 
+                    name="name" 
+                    placeholder="Nome"
+                    required
+                >
+            </div>
+
+            <div class="contact-field">
+                <input 
+                    type="email" 
+                    name="email" 
+                    placeholder="Email"
+                    required
+                >
+            </div>
+
+            <div class="contact-field">
+                <textarea 
+                    name="message" 
+                    placeholder="Mensagem"
+                    required
+                ></textarea>
+            </div>
+
+            <div class="contact-actions">
+                <button type="submit">Enviar</button>
+            </div>
+
+        </form>
+
+    </div>
+</section>
+
         <div class="contact-redes">
             <div class="contact-buttons">
-                    <a href="#portfolio" class="btn-me">Meus Projetos</a>
+                    <div class="contact-link">
+                        <a href="https://www.linkedin.com/in/rayltsonhenrique-lemes" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/icons/icon-linkedin(3).png" alt="Ícone do LinkedIn">
+                        </a>
+                    </div>
+
+                    <div class="contact-link">
+                        <a href="https://github.com/RAYLHL" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/icons/icon-github.png" alt="icon-github">
+                        </a>
+                    </div>
+                    
+                    <div class="contact-link">
+                        <a href="https://www.instagram.com/raylhenrique/" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/icons/icon-intagram.png" alt="icon-instagram">
+                        </a>
+                    </div>
+
+                    <div class="contact-link">  
+                        <a href="https://discord.com/users/429632013986263680" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/icons/icon-discord (1).png" alt="icon-dis
+                            cord">
+                        </a>
+                    </div>
         </div>
 
 
