--- a/main.html
+++ b/main.html
@@ -64,6 +64,7 @@
 
     </div>
     </section>
+
     <section id="about" class="conteiner-about">
         <div class="about-descricao">
         <div class="foto-about"></div>
@@ -73,6 +74,7 @@
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed nibh sed lectus ultricies vulputate. Cras vel enim et ligula blandit condimentum in sit amet elit. Nulla tempor hendrerit erat, sit amet consequat mauris ultrices id. Quisque mattis velit eget eros viverra, a pretium massa pulvinar. Sed sit amet mi non eros pretium dignissim. Suspendisse eu vestibulum nisi, quis varius elit. Etiam a hendrerit massa.</p>
         </div>
     </section>
+    
         <div class="my-stack">
             <h2 class="stack-title">MY STACKS</h2>
 
@@ -93,7 +95,7 @@
 
     <section id="contact" class="conteiner-contact">
 
-        <section id="contact" class="conteiner-contact">
+    <section id="contact" class="conteiner-contact">
     <div class="contact-wrapper">
 
         <h2 class="contact-title">CONTATO</h2>
@@ -162,9 +164,12 @@
                         </a>
                     </div>
         </div>
+</section>
 
+<footer class="footer">
+  <p>© 2025 Desenvolvido por Rayltson</p>
+</footer>
 
-    </section>
 
     <script src="assets/js/carousel.js"></script>
     <script src="assets/js/navbar.js"></script>
